<resources>
    <string name="app_name">Cobro Movil</string>
    <string name="app_picker_name">Applications</string>
    <string name="version">Versión 1.2.3</string>
    <string name="revision">  revisión 19.12.23</string>

    <string name="action_settings">Settings</string>

    <string name="empty" />
    <string name="zero">0.00</string>
    <string name="folio">Folio: </string>

    <string name="eight_percent">5%</string>
    <string name="ten_percent">10%</string>
    <string name="thirteen_percent">15%</string>
    <string name="fifteen_percent">20%</string>

    <string name="aviso">Aviso</string>
    <string name="error">Error</string>
    <string name="excepcion">Excepción</string>
    <string name="pregunta">¿Realmente desea abandonar la sesión actual?</string>
    <string name="confirmacion">¿Confirma que desea abonar</string>
    <string name="cargo">Introduzca el monto a abonar</string>
    <string name="titulo_pago">Formas de Pago</string>
    <string name="seleccion">Impresora</string> <!--variable agregada para la lista de impresoras-->
    <string name="Impresora">Seleccione la impresora a utilizar</string> <!--variable agregada para la lista de impresoras-->

    <string name="pago">Seleccione una forma de pago</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_empresa_display">Rest. TOKS</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="display">0</string>

    <!--Errores WS-->

    <string name="timeoutTitle">Tiempo de espera Excedido</string>
    <string name="timeout">No hubo respuesta del Webservice.</string>
    <string name="ENETUNREACH">Red no disponible, verifique su conexión.</string>
    <string name="ECONNRESET">Conexión reseteada por el servidor.</string>
    <string name="WSUNABLE">El servidor no pudo procesar la petición.</string>

    <!--Fin errores WS-->


    <string name="handlingmsg_warn_receipt_near_end">El papel esta por acabarse.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Nivel de bateria de la impresora bajo.\n</string>
    <string name="handlingmsg_err_no_response">Por favor revise la conexión entre la impresora y el dispositivo movil.\nSe perdio la conexión.\n</string>
    <string name="handlingmsg_err_cover_open">Por favor cierre la tapa del papel.\n</string>
    <string name="handlingmsg_err_receipt_end">Por favor verifique que la impresora tenga papel.\n</string>
    <string name="handlingmsg_err_paper_feed">Por favor suelte el botón alimentación de papel.\n</string>
    <string name="handlingmsg_err_autocutter">
Quite el papel atascado y cierre la cubierta del rollo de papel. \n Quite el papel atascado o las sustancias extrañas en la impresora, luego apague la impresora y enciéndala nuevamente. \n</string>
    <string name="handlingmsg_err_need_recover">Luego, si la impresora no se recupera del error, apague y encienda el interruptor. \n</string>
    <string name="handlingmsg_err_unrecover">Apague y encienda la impresora\n Si ocurrieron los mismos errores incluso si se apaga y enciende, es posible que la impresora no funcione.</string>
    <string name="handlingmsg_err_overheat">Espere hasta que se apague el LED de error de la impresora. \n</string>
    <string name="handlingmsg_err_head">El cabezal de impresión de la impresora está caliente. \n</string>
    <string name="handlingmsg_err_motor">El IC del controlador del motor de la impresora está caliente. \n</string>
    <string name="handlingmsg_err_battery">La beteria de la impresora esta muy caliente.\n</string>
    <string name="handlingmsg_err_wrong_paper">Ponga el rollo de papel correcto.\n</string>
    <string name="handlingmsg_err_battery_real_end">Conecte el adaptador de CA o cambie la batería. \n La batería de la impresora está casi vacía. \n</string>
    <string name="handlingmsg_err_offline">La impresora esta apagada o fuera de alcance.\n</string>
    <string name="estafeta">Estafeta</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="ajustes">Ajustes</string>

</resources>
