<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fondo_negro"
    tools:context="com.View.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:src="?attr/logo"
            app:layout_constraintBottom_toTopOf="@+id/userEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/logo_toks" />

        <Button
            android:id="@+id/buttonLogin"
            style="?attr/fondo_nodialog_button"
            android:layout_width="235dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:text="@string/ingresar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            tools:background="@drawable/efecto_boton_toks" />

        <EditText
            android:id="@+id/userEditText"
            style="?attr/fondo_editText_login"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="?attr/icon_user"
            android:hint="@string/estafeta"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="7"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:background="@drawable/efecto_edit_text_toks"
            tools:drawableStart="@drawable/user_toks" />

        <EditText
            android:id="@+id/passwordEditText"
            style="?attr/fondo_editText_login"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="?attr/icon_password"
            android:hint="@string/contrasena"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="7"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEditText"
            tools:background="@drawable/efecto_edit_text_toks"
            tools:drawableStart="@drawable/password_toks" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButtonSettings"
        android:layout_width="@dimen/imageButton_subir_archivos_width"
        android:layout_height="@dimen/imageButton_subir_archivos_height"
        android:adjustViewBounds="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        app:srcCompat="?attr/icon_settings_login"
        android:src="?attr/icon_settings_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/gbook"
        android:text="@string/ajustes"
        android:textColor="@color/whiteBeer"
        android:textSize="@dimen/tv_ajustes_text_size"
        app:fontFamily="@font/gbook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonSettings"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="@+id/imageButtonSettings"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonSettings"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButtonSubirArchivos"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/icon_subir" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gbook"
        android:text="Subir"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="@color/whiteBeer"
        android:textSize="26sp"
        app:fontFamily="@font/gbook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonSubirArchivos"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/imageButtonSubirArchivos"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonSubirArchivos"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/version"
        style="?attr/textview_menu_lateral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewRevision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/revision"
        style="?attr/textview_menu_lateral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonUpdate"
        android:layout_width="@dimen/imageButton_subir_archivos_width"
        android:layout_height="@dimen/imageButton_subir_archivos_height"
        android:layout_marginEnd="34dp"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="?attr/icon_descarga"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonSettings"
        app:layout_constraintTop_toTopOf="@+id/imageButtonSettings"
        tools:srcCompat="@drawable/ic_descarga_toks" />

    <TextView
        android:id="@+id/tvActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Actualizar"
        android:fontFamily="@font/gbook"
        android:textColor="@color/whiteBeer"
        android:textSize="@dimen/tv_ajustes_text_size"
        app:fontFamily="@font/gbook"
        app:layout_constraintBottom_toBottomOf="@+id/tvAjustes"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonUpdate"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageButtonUpdate"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonUpdate"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
